# git_collab

./: .dockerignore  COMPONENT_MODERNIZATION_COMPLETE.md  DASHBOARD_FLOW_SUMMARY.md  DESIGN_SYSTEM_REFERENCE.md  DOCKER_SETUP.md  DOCUMENTATION_INDEX.md  HISTORY_SECTION_FIX.md  HOW_TO_RUN.md  MODERNIZATION_SUMMARY.md  PHASE_COMPLETION_REPORT.md  QUICK_START.md  README.md  README_DOCKER.md  RESUME_ANALYZER_SETUP.md  daksh.js  future_features.txt  package-lock.json  package.json  sample_resume.txt  start.sh  stop.sh  vaibhav.jsx  vercel.json
.github/: copilot-instructions.md
AI_backend/: .dockerignore  .env  .gitignore  README.md  README_TESTS.md  main.py  my_data3.txt  pyproject.toml
AI_backend/app/: analyzer.py  parse.py
AI_backend/app/agents/: resume_analyzer_agent.py  resume_parser_agent.py
AI_backend/app/tools/: web_search_tool.py
AI_backend/app/workflows/: resume_analysis_workflow.py
AI_backend/tests/: conftest.py  test_analyzer.py  test_main.py  test_parse.py
Backend/: .dockerignore  .env  README.md  README_TESTS.md  index.js  jest.config.js  package-lock.json  package.json
Backend/controller/: AnalysisController.js  JobSearchController.js  UserController.js  analysisController.js  authController.js
Backend/middleware/: authMiddleware.js  errorHandler.js
Backend/model/: Analysis.js  User.js  db.js
Backend/routes/: analysisRoutes.js  authRoutes.js  jobSearchRoutes.js  userRoutes.js
Backend/services/: aiClient.js  jobService.js
Backend/tests/: AnalysisController.test.js  JobSearchController.test.js  (+2 more)
Fe/: .dockerignore  DASHBOARD_MODERNIZATION.md  README.md  USER_FLOW.md  index.html  package-lock.json  package.json  tod.txt
docker/: .dockerignore  Dockerfile.ai-backend  Dockerfile.ai-backend.dev  Dockerfile.backend  Dockerfile.backend.dev  Dockerfile.frontend  Dockerfile.frontend.dev  README.md  docker-compose.dev.yml  docker-compose.yml
(+27 files in other folders)
